<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_layout"
    android:name="com.csci150.newsapp.entirenews.NewsItemFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.csci150.newsapp.entirenews.NewsItemFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:clipToPadding="false"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:listitem="@layout/layout_newsitem_wide" />
</android.support.v4.widget.SwipeRefreshLayout>