...
        app:layout_constraintEnd_toStartOf="@id/iv_cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:text="Las Vegas shooter's girlfriend: Who is Marilou Danley? Marilou Danley had been out of the country while her boyfriend, Stephen Paddock, opened fire during a Las Vegas music festival, killing at least 59 people. ... Marilou Danley was overseas during the Las Vegas shooting." />

    <ImageButton
        android:id="@+id/ib_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_half"
        android:layout_marginTop="@dimen/margin_half"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/save"
...
